--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 		<groupId>cn.bc.business.workflow</groupId>
 		<artifactId>bc-business-workflow-parent</artifactId>
 		<version>1.0-SNAPSHOT</version>
-		<relativePath>bc-workflow-parent/pom.xml</relativePath>
+		<relativePath>bc-business-workflow-parent/pom.xml</relativePath>
 	</parent>
 	<artifactId>bc-business-workflow</artifactId>
 	<packaging>pom</packaging>
