--- a/bc-business-workflow-carrenew/pom.xml
+++ b/bc-business-workflow-carrenew/pom.xml
@@ -7,10 +7,15 @@
 		<version>1.0-SNAPSHOT</version>
 		<relativePath>../bc-business-workflow-parent/pom.xml</relativePath>
 	</parent>
-	<artifactId>bc-business-workflow-common</artifactId>
-	<name>bc-business-workflow-common</name>
-	<description>bc-business-workflow 的公共信息配置</description>
+	<artifactId>bc-business-workflow-carrenew</artifactId>
+	<name>bc-business-workflow-carrenew</name>
+	<description>车辆续保处理流程</description>
 	
 	<dependencies>
+		<dependency>
+			<groupId>cn.bc.business.workflow</groupId>
+			<artifactId>bc-business-workflow-common</artifactId>
+			<version>${project.version}</version>
+		</dependency>
 	</dependencies>
 </project>
