--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
 		<module>bc-business-workflow-parent</module>
 		<module>bc-business-workflow-common</module>
 		<module>bc-business-workflow-confirmretiredcars</module>
+		<module>bc-business-workflow-carretired</module>
+		<module>bc-business-workflow-carrenew</module>
 		<module>bc-business-workflow-jiaoche</module>
 	</modules>
 	<scm>
