--- a/bc-business-workflow-parent/pom.xml
+++ b/bc-business-workflow-parent/pom.xml
@@ -1,23 +1,22 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>cn.bc.workflow</groupId>
 		<artifactId>bc-workflow-parent</artifactId>
-		<version>1.0-SNAPSHOT</version>
+		<version>1.1</version>
 		<relativePath>../../bc-workflow/bc-workflow-parent/pom.xml</relativePath>
 	</parent>
 	<groupId>cn.bc.business.workflow</groupId>
 	<artifactId>bc-business-workflow-parent</artifactId>
-	<version>1.0-SNAPSHOT</version>
+	<version>1.5</version>
 	<packaging>pom</packaging>
 	<name>bc-business-workflow-parent</name>
 	<description>营运工作流基本配置</description>
 
 	<properties>
 		<!-- 平台版本号 -->
-		<framework.version>1.0-SNAPSHOT</framework.version>
-		<workflow.version>1.0-SNAPSHOT</workflow.version>
+		<framework.version>1.1</framework.version>
+		<workflow.version>1.1</workflow.version>
 
 		<app.name>bcsystem</app.name>
 		<app.debug>true</app.debug>
