增加司机办证流程模块

--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
 		<module>bc-business-workflow-carrenew</module>
 		<module>bc-business-workflow-carmanentry</module>
 		<module>bc-business-workflow-generalorder</module>
+		<module>bc-business-workflow-requestservicecertificate</module>
 	</modules>
 	<scm>
 		<connection>scm:git:git://localhost/bc-business-workflow.git</connection>
