--- a/bc-business-workflow-cartraffichandle/pom.xml
+++ b/bc-business-workflow-cartraffichandle/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>cn.bc.business.workflow</groupId>
 		<artifactId>bc-business-workflow-parent</artifactId>
-		<version>1.0-SNAPSHOT</version>
+		<version>1.9</version>
 		<relativePath>../bc-business-workflow-parent/pom.xml</relativePath>
 	</parent>
 	<artifactId>bc-business-workflow-cartraffichandle</artifactId>
