--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
 		<module>bc-business-workflow-requestservicecertificate</module>
 		<module>bc-business-workflow-cartraffichandle</module>
 		<module>bc-business-workflow-complainhandle</module>
+		<module>bc-business-workflow-infractbusinesshandle</module>
 	</modules>
 	<scm>
 		<connection>scm:git:git://localhost/bc-business-workflow.git</connection>
