--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
 		<module>bc-business-workflow-complainhandle</module>
 		<module>bc-business-workflow-companycomplainhandle</module>
 		<module>bc-business-workflow-infractbusinesshandle</module>
+		<module>bc-business-workflow-requirement</module>
 	</modules>
 	<scm>
 		<connection>scm:git:git://localhost/bc-business-workflow.git</connection>
